tile.css
html {
  
    min-height: 1000px;
}

.tile-group {
	

    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
    grid-auto-rows: auto;
    gap: 1.5px;
    font-family: sans-serif;
    padding-top: 5vh;
    max-width: 70vw;
    display: grid;
    gap: 20px;
    margin-bottom: 13vh;
    transform-origin: left top;
	transform: scale(1.3)
    

}

.tile-group * {
    box-sizing: border-box;
    
}



.tile-image {
    max-width: 100%;
    height: 150px;
    object-fit: cover;
    display: block;
 
}
.tile-single img:hover {
    filter: brightness(150%);
}


.tile-content {
    line-height: 1.5;
    font-size: 0.9em;
    padding: 15px;
    overflow: hidden;
    max-width: 100%;
    max-height: 20rem;
}

.tile-content > p:first-of-type {
    margin-top: 0;
}

.tile-content > p:last-of-type {
    margin-bottom: 0;
}

.tile-name {
    width: 100%;
    height: 3rem;
    margin-bottom: 0.1rem;
}

 .tile-name a {
font-style: italic;
font-size: 1em;
font-weight: bold;
color: #ff015d;
font-style: italic;
text-decoration: underline;
    
}

.tile-name a:hover {
    filter: brightness(150%);
}



.tile-description {
    justify-content: space-between;
    align-items: center;
    font-family: 'Noto Serif', serif;
    font-size: 1em;
    height: 4.5rem;
    margin-bottom: 0.001rem;
    overflow: hidden;
}
.tile-links {
    
    display: block;
    justify-content: space-between;
}

.tile-links a:hover {
    color: #ff015d;
    filter: brightness(150%);
}

.flex-container {
    display: flex;
    flex-direction: column;
    flex-direction: flex-start;
  }

